--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
   
     <div class="container">
       <!-- Example row of columns -->
-      <h2>Buscar como: (Colocar perfiles)</h2>
+   
       {% block contenido %}{% endblock %}
       <hr>
 
@@ -83,7 +83,7 @@
         <p>&copy; Company 2014</p>
       </footer>
     </div> 
-      {% block script %}{% endblock %}
+
     <!-- /container --><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 
@@ -91,6 +91,42 @@
 
         <script src="{% static 'js/main.js' %}"></script>
         <script src="{% static 'js/bootstrap-tagsinput.js' %}"></script>
+         {% block script %} {% endblock %}
+        <script>
+            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
+            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+            g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+            s.parentNode.insertBefore(g,s)}(document,'script'));
+            $(document).on("ready", setup);
+            function setup()
+            {
+              $.ajaxSetup({
+                beforeSend: function(xhr, settings) {
+                  function getCookie(name) {
+                    var cookieValue = null;
+                      if (document.cookie && document.cookie != '') {
+                        var cookies = document.cookie.split(';');
+                          for (var i = 0; i < cookies.length; i++) {
+                            var cookie = jQuery.trim(cookies[i]);
+                            // Does this cookie string begin with the name we want?
+                              if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                              cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                              break;
+                              }
+                          }
+                      }
+                  return cookieValue;
+                  }
+                  if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
+                // Only send the token to relative URLs i.e. locally.
+                    xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
+                  }
+                }
+              });
+            }
+
+        </script>
+
         
     </body>
 </html>
