--- a/templates/principal/index.html
+++ b/templates/principal/index.html
@@ -3,17 +3,70 @@
 {% block titulo %} Realizar Busqueda {% endblock %}
 
 {% block contenido %}
+ <h2>Buscar como:</h2>
 
-<input type="text" value="Amsterdam,Washington,Sydney,Beijing,Cairo" data-role="tagsinput" placeholder="Add tags" />
+ <ul >
+   {% for perfil in perfiles %}
+ 	<li>{{perfil.nombre}}</li>
+ 	{% endfor%}
+ </ul>
 
-   <form class="navbar-form navbar-left" role="search">
+	<hr>
+    
+    <form class="navbar-form navbar-left" role="search">
+        {% csrf_token %}
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Search">
+        <input type="text" class="form-control" placeholder="Search" id="palabra_buscar">
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+      <input type="button" value="Buscar" class="btn btn-primary" id="buscar"> 
+
     </form>
-    <br>
+    <br><br><br>
+
+    <hr>
+    <div id ="caja_fuera">
+<!--          {% for pagina in paginas %}
+          <div id ="caja_dentro">
+           		<h3>{{pagina.titulo}}<h3>
+           		<p>{{pagina.contenido}}</p>
+         	</div>
+       	{% endfor%} -->
+    </div>
+
 {% endblock %}
 
+{% block script %}
+<script>
+     $("#buscar").click(function()
+     {
+          palabra_buscar = $('#palabra_buscar').val();
+          console.log(palabra_buscar);
+          
+           $.ajax({
+            data:{'palabra_buscar':palabra_buscar},
+            type:"GET",
+            url:"/ajax_busqueda/",
+            success: function(data)
+            { 
+              console.log(data)
 
- 
+               html = "";
+              for(i=0;i < data.length;i++)
+              {
+               html += " <div id ='caja_dentro'>";
+               html += " <h3>"+data[i].fields.titulo+"</h3>";
+               html += " <p>"+data[i].fields.contenido+"</p>";
+               html += "</div>";
+               }
+
+               $('#caja_fuera').html(html); 
+               },
+            error:function()
+            {
+              
+              }
+              });
+     });
+        
+  </script> 
+ {% endblock %}
